<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">mySHiT</string>
    <string name="placeholder_short">Placeholder</string>
    <string name="placeholder_medium">Medium length placeholder text</string>
    <string name="placeholder_long"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]]></string>
    <string name="placeholder_multiline_2">Placeholder text\nSecond line of placeholder</string>
    <string name="placeholder_multiline_3">Placeholder text\nSecond line of placeholder\nThird line of text</string>
    <string name="placeholder_initials">TGr</string>
    <string name="group_title_future">Future</string>
    <string name="group_title_upcoming">Upcoming</string>
    <string name="group_title_current">Current</string>
    <string name="group_title_historic">Historic</string>
    <string name="title_trip_details">Trip Details</string>
    <string name="trip_page_itinerary">Itinerary</string>
    <string name="trip_page_messages">Messages</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome_message">Welcome to SHiT.\n\nTo access your travel details, please log on using the user name and password provided in your welcome letter.</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_unauthorised">Username or password is incorrect.</string>
    <string name="title_flight_details">Flight details</string>
    <string name="label_flight_no">Flight #</string>
    <string name="label_airline_name">Airline</string>
    <string name="label_flight_departure">Departure</string>
    <string name="label_flight_arrival">Arrival</string>
    <string name="label_flight_refs">References</string>
    <string name="title_private_transport_details">Travel details</string>
    <string name="label_privtrans_company">Company</string>
    <string name="label_privtrans_departure">Departure</string>
    <string name="label_privtrans_arrival">Arrival</string>
    <string name="label_privtrans_phone">Phone</string>
    <string name="label_privtrans_reference">Reference</string>
    <string name="title_scheduled_transport_details">Travel details</string>
    <string name="label_scheduled_transport_company">Company</string>
    <string name="label_scheduled_transport_route_no">Route #</string>
    <string name="label_scheduled_transport_departure">Departure</string>
    <string name="label_scheduled_transport_arrival">Arrival</string>
    <string name="label_scheduled_transport_phone">Phone</string>
    <string name="label_scheduled_transport_reference">Reference</string>
    <string name="title_hotel_details">Hotel details</string>
    <string name="label_hotel">Hotel</string>
    <string name="label_hotel_checkin">Check-in</string>
    <string name="label_hotel_checkout">Check-out</string>
    <string name="label_hotel_reference">Reference</string>
    <string name="label_hotel_phone">Phone</string>
    <string name="label_hotel_transfer_info">Transfer info</string>
    <string name="title_event_details">Event details</string>
    <string name="title_event_details_rstdnr">Restaurant details</string>
    <string name="label_event_venue">Venue</string>
    <string name="label_event_start">Start</string>
    <string name="label_event_travel_time">Travel time</string>
    <string name="label_event_reference">Reference</string>
    <string name="label_event_venue_phone">Phone</string>
    <string name="label_event_access_info">Access details</string>
    <string name="chat_seen_by_one">Seen by %1$s</string>
    <string name="chat_seen_by_many">Seen by %1$s and %2$s</string>
    <string name="chat_seen_by_all">Seen by everyone</string>
    <string name="chat_reply_error_unknown_trip">Unable to reply to unknown trip</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Log out</string>
    <string name="action_send_message">Send message</string>
    <string name="alert_title_trip">Trip start</string>
    <string name="alert_title_travel">Departure</string>
    <string name="alert_title_connection">Connection</string>
    <string name="alert_title_event">Event</string>
    <string name="alert_msg_trip">SHiT trip starts in %1$s (%2$s)</string>
    <string name="alert_msg_travel">Departs in %1$s, at %2$s</string>
    <string name="alert_msg_connection">Departs in %1$s, at %2$s</string>
    <string name="alert_msg_event">Starts in %1$s, at %2$s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_upcoming">Upcoming trips</string>
    <string name="pref_upcoming_default">N7</string>
    <string name="pref_alertLeadTime_trip">Trip notification</string>
    <string name="pref_alertLeadTime_trip_default">48</string>
    <string name="pref_alertLeadTime_trip_summary">%s before start of trip</string>
    <string name="pref_alertLeadTime_departure">Departure notification</string>
    <string name="pref_alertLeadTime_departure_default">240</string>
    <string name="pref_alertLeadTime_departure_summary">%s before first departure</string>
    <string name="pref_alertLeadTime_connection">Connection notification</string>
    <string name="pref_alertLeadTime_connection_default">45</string>
    <string name="pref_alertLeadTime_connection_summary">%s before departure</string>
    <string name="pref_alertLeadTime_event">Event notification</string>
    <string name="pref_alertLeadTime_event_default">30</string>
    <string name="pref_alertLeadTime_event_summary">%s before event/departure</string>
    <string-array name="pref_upcoming_entries">
        <item>Next trip only</item>
        <item>Starting within 7 days</item>
        <item>Starting within 30 days</item>
        <item>Next + within 7 days</item>
        <item>Next + within 30 days</item>
    </string-array>
    <string-array name="pref_upcoming_values">
        <item>N</item>
        <item>7</item>
        <item>30</item>
        <item>N7</item>
        <item>N30</item>
    </string-array>
    <string-array name="pref_alertLeadTime_trip_entries">
        <item>Off</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>2 days</item>
    </string-array>
    <string-array name="pref_alertLeadTime_trip_values">
        <item>-1</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
        <item>48</item>
    </string-array>
    <string-array name="pref_alertLeadTime_departure_entries">
        <item>Off</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>4 hours</item>
    </string-array>
    <string-array name="pref_alertLeadTime_departure_values">
        <item>-1</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>240</item>
    </string-array>
    <string-array name="pref_alertLeadTime_connection_entries">
        <item>Off</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string-array name="pref_alertLeadTime_connection_values">
        <item>-1</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
    <string-array name="pref_alertLeadTime_event_entries">
        <item>Off</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string-array name="pref_alertLeadTime_event_values">
        <item>-1</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
    <string name="NTF.INSERT.ADDRESS" tools:ignore="UnusedResources">%1$s: Address information updated</string>
    <string name="NTF.INSERT.BOOKING" tools:ignore="UnusedResources">%1$s: New booking added</string>
    <string name="NTF.INSERT.BOOKINGREF" tools:ignore="UnusedResources">%1$s: New booking reference added</string>
    <string name="NTF.INSERT.EVENT" tools:ignore="UnusedResources">%1$s: New event added</string>
    <string name="NTF.INSERT.HOTEL" tools:ignore="UnusedResources">%1$s: New hotel booking added</string>
    <string name="NTF.INSERT.ITINERARY" tools:ignore="UnusedResources">%1$s: Itinerary updated</string>
    <string name="NTF.INSERT.TRIP" tools:ignore="UnusedResources">%1$s: New trip added</string>
    <string name="NTF.INSERT.USERPROFILE" tools:ignore="UnusedResources">User profile updated</string>
    <string name="NTF.INSERT.CHATMESSAGE">%1$s to %2$s: %3$s</string>
    <string name="NTF.UPDATE.ADDRESS" tools:ignore="UnusedResources">%1$s: Address information updated</string>
    <string name="NTF.UPDATE.BOOKING" tools:ignore="UnusedResources">%1$s: Booking updated</string>
    <string name="NTF.UPDATE.BOOKINGREF" tools:ignore="UnusedResources">%1$s: Booking reference updated</string>
    <string name="NTF.UPDATE.EVENT" tools:ignore="UnusedResources">%1$s: Event updated</string>
    <string name="NTF.UPDATE.HOTEL" tools:ignore="UnusedResources">%1$s: Hotel booking updated</string>
    <string name="NTF.UPDATE.ITINERARY" tools:ignore="UnusedResources">%1$s: Itinerary updated</string>
    <string name="NTF.UPDATE.TRIP" tools:ignore="UnusedResources">%1$s: Trip updated</string>
    <string name="NTF.UPDATE.USERPROFILE" tools:ignore="UnusedResources">User profile updated</string>
    <string name="NTF.DELETE.ADDRESS" tools:ignore="UnusedResources">%1$s: Address information updated</string>
    <string name="NTF.DELETE.BOOKING" tools:ignore="UnusedResources">%1$s: Booking removed</string>
    <string name="NTF.DELETE.BOOKINGREF" tools:ignore="UnusedResources">%1$s: Booking reference removed</string>
    <string name="NTF.DELETE.EVENT" tools:ignore="UnusedResources">%1$s: Event cancelled</string>
    <string name="NTF.DELETE.HOTEL" tools:ignore="UnusedResources">%1$s: Hotel booking removed</string>
    <string name="NTF.DELETE.ITINERARY" tools:ignore="UnusedResources">%1$s: Itinerary updated</string>
    <string name="NTF.DELETE.TRIP" tools:ignore="UnusedResources">%1$s: Trip updated</string>
    <string name="NTF.DELETE.USERPROFILE" tools:ignore="UnusedResources">User profile updated</string>
    <string name="ntf_category_default">DEFAULT-NTF-CATEGORY</string>
    <string name="ntf_channel_default" tools:ignore="MissingTranslation">DEFAULT</string>
    <string name="ntf_channel_name_chat">SHiTChat</string>
    <string name="ntf_channel_name_alarm">Upcoming Event</string>
    <string name="ntf_channel_name_update">Trip Update</string>
    <string name="ntf_channel_desc_chat">Instant SHiTChat messages from other trip participants</string>
    <string name="ntf_channel_desc_alarm">Notification of upcoming departures, events, etc.</string>
    <string name="ntf_channel_desc_update">Notification of trip updates (itinerary changes, new events, etc.)</string>
    <string name="ntf_action_chat_reply">Reply</string>
    <string name="ntf_action_chat_replied">Replied</string>
    <string name="ntf_action_chat_ignore">Ignore</string>
</resources>