<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/scheduled_transport_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <TableRow android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:text="@string/label_scheduled_transport_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_column="1" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_short"
            android:id="@+id/scheduled_transport_company"
            android:layout_column="2"/>
    </TableRow>

    <TableRow android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:text="@string/label_scheduled_transport_route_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_column="1" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_short"
            android:id="@+id/scheduled_transport_route_no"
            android:layout_column="2"/>
    </TableRow>

    <TableRow android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:text="@string/label_scheduled_transport_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_column="1" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_short"
            android:id="@+id/scheduled_transport_departure"
            android:layout_column="2"/>
    </TableRow>

    <TableRow android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:text="@string/label_scheduled_transport_arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_column="1" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_short"
            android:id="@+id/scheduled_transport_arrival"
            android:layout_column="2"/>
    </TableRow>

    <TableRow android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:text="@string/label_scheduled_transport_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_column="1" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_short"
            android:id="@+id/scheduled_transport_phone"
            android:layout_column="2"/>
    </TableRow>

    <TableRow android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:text="@string/label_scheduled_transport_reference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_column="1" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_medium"
            android:id="@+id/scheduled_transport_reference"
            android:layout_column="2"/>
    </TableRow>


</TableLayout>